[gd_scene load_steps=5 format=3 uid="uid://cul5mpy17ebfl"]

[ext_resource type="PackedScene" uid="uid://ubyatap3sylf" path="res://src/Tools/BaseDraw.tscn" id="1"]
[ext_resource type="PackedScene" path="res://src/UI/Nodes/ValueSliderV2.tscn" id="2"]
[ext_resource type="Script" path="res://src/Tools/DesignTools/Pencil.gd" id="3"]

[sub_resource type="ButtonGroup" id="ButtonGroup_e3rs3"]
resource_name = "rotate"
allow_unpress = true

[node name="ToolOptions" instance=ExtResource("1")]
script = ExtResource("3")

[node name="Rotate90" parent="RotationOptions/GridContainer/Rotate" index="0"]
button_group = SubResource("ButtonGroup_e3rs3")

[node name="Rotate180" parent="RotationOptions/GridContainer/Rotate" index="1"]
button_group = SubResource("ButtonGroup_e3rs3")

[node name="Rotate270" parent="RotationOptions/GridContainer/Rotate" index="2"]
button_group = SubResource("ButtonGroup_e3rs3")

[node name="Overwrite" type="CheckBox" parent="." index="5"]
layout_mode = 2
tooltip_text = "Overwrites color instead of blending it. This option is only relevant with colors that are not fully opaque"
mouse_default_cursor_shape = 2
text = "Overwrite color"

[node name="FillInside" type="CheckBox" parent="." index="6"]
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Fill inside"

[node name="SpacingMode" type="CheckBox" parent="." index="7"]
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Spacing"

[node name="Spacing" parent="." index="8" instance=ExtResource("2")]
visible = false
layout_mode = 2
allow_greater = true
show_ratio = true
prefix_x = "Gap X:"
prefix_y = "Gap Y:"
suffix_x = "px"
suffix_y = "px"

[connection signal="toggled" from="Overwrite" to="." method="_on_Overwrite_toggled"]
[connection signal="toggled" from="FillInside" to="." method="_on_FillInside_toggled"]
[connection signal="toggled" from="SpacingMode" to="." method="_on_SpacingMode_toggled"]
[connection signal="value_changed" from="Spacing" to="." method="_on_Spacing_value_changed"]
